# llm-redteam

./: .gitignore  README.md  pyproject.toml
dashboard/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: api.ts  main.tsx  theme.ts  types.ts
docs/: EXECUTOR_WORKFLOW.zh-CN.md  MECHANISM_LITERATURE.md  PRODUCT_DESIGN.md
examples/: campaign-inputs.example.json  challenge-intake.example.json  mechanism-taxonomy-research-extension.zh-CN.json  mechanism-taxonomy.zh-CN.json  mechanisms.example.json  plan.example.json  request_template.txt  seed_cases.json
experiments/: __init__.py  memory_cases.py
redteam_memory/: __init__.py  adapters.py  analysis_export.py  campaign.py  campaign_exports.py  cli.py  defense.py  execution_artifacts.py  executor_profiles.py  external_results.py  grayswan.py  inspect_integration.py  intake.py  ipi_import.py  jailbreaker_adapter.py  llm_guard_adapter.py  llm_planning.py  llm_provider.py  markdown_import.py  mechanisms.py  models.py  planner.py  pyrit_quickstart.py  research.py  runner.py  state.py  store.py  targets.py  web_api.py
scripts/: jailbreaker_ce_bridge.py  llm_guard_bridge.py  pyrit_quickstart_demo.py  smoke_pyrit_http.py
tests/: test_campaign.py  test_campaign_exports.py  test_defense.py  test_execution_artifacts.py  test_executor_profiles.py  test_external_results.py  test_intake.py  test_llm_guard_adapter.py  test_llm_planning.py  test_llm_provider.py  test_mechanisms.py  test_memory.py  test_planner_and_analysis.py  test_pyrit_quickstart.py  test_research.py  test_web_api.py
