[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-redteam-agent"
version = "0.1.0"
description = "Evidence-first memory and replay support for authorized LLM red-team experiments"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
redteam-memory = "redteam_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]

